fix: add margin-top to expandable card for improved spacing

--- a/src/app/components/expandable-card/expandable-card.scss
+++ b/src/app/components/expandable-card/expandable-card.scss
@@ -17,6 +17,7 @@
   align-items: center;
   justify-content: center;
   gap: var(--space-sm);
+  margin-top: 70px;
 
   /* Box Model */
   //width: 100%;
@@ -208,6 +209,7 @@
   .icon-tile {
     //min-height: 70px;
     width: 100%;
+    margin-top: 0px;
 
     i {
       font-size: 1.25rem;
